--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="preload" as="image" href="/port/static/media/desk2.ba5e8dc2.jpg" />
+    <link rel="preload" as="image" href="/static/media/desk2.ba5e8dc2.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
